discussion/kv_engine/178792/178792_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-35297: Meter RangeScan key/values

Add calls to account for key or key+value as the scan reads
data.

Change-Id: Ice5153c0635c3084d4f50345879c8f704a2dc7f9

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Jim Walker
Date: 2022-08-12 10:32:20.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-08-12 10:33:59.000000000
Message: 
Patch Set 1: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/48302/ : ABORTED

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/48302/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/40576/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/40576/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/9100/ : ABORTED

Clang linker error: linker command failed due to signal (use -v to see invocation) ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/9100/ )

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/9100/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/21347/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/21347/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/22420/ : ABORTED

Clang linker error: linker command failed due to signal (use -v to see invocation) ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/22420/ )

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/22420/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/20595/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/20595/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/9197/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/9197/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/21698/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/21698/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/29724/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/29724/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/19410/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/range_scans/range_scan_callbacks.cc:51:37: error: member access into incomplete type "CookieIface" [clang-diagnostic-error]
    const_cast<CookieIface&>(cookie).addDocumentReadBytes(key.size());
                                    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/range_scans/range_scan_callbacks.h:15:7: note: forward declaration of "CookieIface"
class CookieIface;
      ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/range_scans/range_scan_callbacks.cc:59:37: error: member access into incomplete type "CookieIface" [clang-diagnostic-error]
    const_cast<CookieIface&>(cookie).addDocumentReadBytes(
                                    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/range_scans/range_scan_callbacks.h:15:7: note: forward declaration of "CookieIface"
class CookieIface;
      ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/19410/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/range_scans/range_scan_callbacks.cc:51:37:
error: member access into incomplete type "CookieIface" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/19410/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/18622/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
